# Tyde

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DRIVER_MCP_TEST_PLAN.md  biome.json  build.sh  dev.sh  flake.nix  index.html  package-lock.json  package.json  playwright.mobile.config.mjs  playwright.mobile.live.config.mjs  rust-toolchain.toml  tauri.no-reload.conf.json  todo_tycode.md  todo_tyde.md  tsconfig.json  tsconfig.test.json  vite.config.test.ts  vite.config.ts  wdio.conf.ts
dev-driver/: Cargo.toml
dev-driver/src/: agent_control.rs  debug.rs  lib.rs  main.rs
frontend/: Cargo.toml  index.html  styles.css  syntax_worker.js
frontend/src/: actions.rs  app.rs  bridge.rs  devtools.rs  dispatch.rs  highlight.rs  highlight_worker.rs  line_source.rs  main.rs  markdown.rs  perf.rs  send.rs  state.rs  syntax_highlight.rs  term_bridge.rs
frontend/src/components/: agent_monitor_view.rs  agents_panel.rs  backend_capacity.rs  center_zone.rs  chat_input.rs  chat_message.rs  chat_streaming.rs  chat_view.rs  command_palette.rs  diff_view.rs  dock_zone.rs  feedback_modal.rs  file_explorer.rs  file_view.rs  find_bar.rs  git_panel.rs  header.rs  help_tour.rs  hermes_settings.rs  home_view.rs  host_browser.rs  hover_popover.rs  inflight_tray.rs  inline_review.rs  launch_menu.rs  mod.rs  orchestration_view.rs  project_rail.rs  references_panel.rs  review_layer.rs  review_view.rs  search_panel.rs  session_settings.rs  sessions_panel.rs  settings_panel.rs  task_list.rs  team_roster_sidebar.rs  teams_panel.rs  terminal_view.rs  tool_card.rs  (+3 more)
frontend/tauri-shell/: Cargo.toml  build.rs  tauri.conf.json
frontend/tauri-shell/capabilities/: default.json
frontend/tauri-shell/icons/: icon.icns
frontend/tauri-shell/src/: bridge.rs  dev_host.rs  devtools.rs  host_bridge_uds.rs  host_stdio.rs  host_store.rs  host_uds.rs  lib.rs  logging.rs  main.rs  remote_bootstrap.rs  router.rs
mobile-frontend/: Cargo.toml  index.html  styles.css
mobile-frontend/e2e/: README.md  mobile-ui.spec.mjs
mobile-frontend/e2e/live/: README.md  bootstrap.mjs  live.spec.mjs  profile.mjs
mobile-frontend/src/: actions.rs  app.rs  bridge.rs  dispatch.rs  fixtures.rs  main.rs  markdown.rs  send.rs  state.rs
mobile-frontend/src/bridge/: tauri_backend.rs
mobile-frontend/src/components/: agents_view.rs  backend_capacity.rs  bottom_nav.rs  chat_input.rs  chat_message.rs  chat_view.rs  connection_banner.rs  diff_viewer.rs  error_banner.rs  file_viewer.rs  home_view.rs  host_browser.rs  mod.rs  onboarding_view.rs  paired_hosts_picker.rs  pairing_flow.rs  pending_submissions.rs  projects_view.rs  review_detail.rs  reviews_view.rs  sessions_view.rs  settings_view.rs  teams_view.rs  tool_card.rs
mobile/src-tauri/: Cargo.toml  Info.ios.plist  tauri.conf.json
mobile/src-tauri/capabilities/: default.json
mobile/src-tauri/src/: debug_http.rs  lib.rs  main.rs  mqtt_connection.rs  paired_hosts.rs  psk_store.rs  types.rs
mqtt-transport/: Cargo.toml
mqtt-transport/src/: chunking.rs  client.rs  client_wasm.rs  config.rs  error.rs  framing.rs  lib.rs  link.rs  link_native.rs  link_wasm.rs  protocol_driver.rs  reconnect.rs  rendezvous.rs  session.rs  stream.rs  time.rs  topic.rs  types.rs  wasm_codec.rs
mqtt-transport/tests/: topic_roundtrip.rs
old/tyde-server/: Cargo.toml  build.rs
old/tyde-server/src/: acp.rs  admin.rs  agent_defs_io.rs  chat_buffer.rs  conversation_sessions.rs  debug_log.rs  dependencies.rs  file_service.rs  file_watch.rs  git_service.rs  invoke.rs  lib.rs  mock_backend.rs  remote_control.rs  runtime_ops.rs  server_state.rs  skill_injection.rs  terminal.rs  test_support.rs  tool_policy.rs  usage.rs  workflow_io.rs
old/tyde-server/tests/: TESTING.md  basic.rs  fixture.rs
server/: Cargo.toml
server/src/: acceptor.rs  agent_control_mcp.rs  browse_stream.rs  config_mcp.rs  connection.rs  debug_mcp.rs  error.rs  hermes_mcp_bridge.rs  host.rs  lib.rs  mobile_access.rs  paths.rs  process_env.rs  project_stream.rs  remote.rs  review_mcp.rs  router.rs  steering.rs  stream.rs  sub_agent.rs  team_registry.rs  terminal_stream.rs
server/src/agent/: customization.rs  mod.rs  registry.rs  supervisor.rs
server/src/backend/: acp.rs  agent_control_progress.rs  antigravity.rs  claude.rs  codex.rs  gemini.rs  hermes.rs  hermes_config.rs  kiro.rs  legacy_types.rs  mock.rs  mod.rs  setup.rs  subprocess.rs  turn_emitter.rs  tycode.rs  tycode_config.rs
server/src/code_intel/: bootstrap.rs  language_server.rs  lsp_client.rs  lsp_codec.rs  lsp_position.rs  lsp_provider.rs  mod.rs  provider.rs  pyright.rs  rust_analyzer.rs  service.rs
server/src/review/: actor.rs  bundle.rs  mod.rs  reviewer.rs
server/src/store/: agent_teams.rs  custom_agents.rs  (+11 more)
spikes/mqttbytes-standalone-wasm/: Cargo.toml
spikes/mqttbytes-wasm/: Cargo.toml
src-tauri/: Cargo.toml  build.rs  clippy.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: acp.rs  admin.rs  agent_defs_io.rs  agent_mcp_http.rs  agent_runtime.rs  backend.rs  backend_transport.rs  chat_buffer.rs  claude.rs  codex.rs  conversation.rs  debug_mcp_http.rs  dev_instance.rs  driver_mcp_http.rs  file_service.rs  file_watch.rs  gemini.rs  git_service.rs  host.rs  host_router.rs  kiro.rs  lib.rs  main.rs  project_store.rs  protocol.rs  remote.rs  remote_control.rs  session_store.rs  skill_injection.rs  steering.rs  subprocess.rs  terminal.rs  tyde_server_conn.rs  usage.rs  workflow_io.rs
tests/: Cargo.toml  TESTING.md
tests/e2e/: chat.test.ts  git.test.ts  helpers.ts  home.test.ts  remote.test.ts  settings.test.ts  tab-docking.test.ts  workbench.test.ts  workflows.test.ts  workspace.test.ts
tests/src/: lib.rs
tests/tests/: agents.rs  agents_view_preferences.rs  backend.rs  bootstrap.rs  child_completion_queue.rs  client_runtime.rs  code_intel.rs  custom_agents.rs  fixture.rs  handshake.rs  mobile_pairing.rs  projects.rs  queue.rs  review.rs  session_resume.rs  settings.rs  side_questions.rs  supervisor.rs  teams.rs  terminal.rs  workbenches.rs  workflows.rs
tyde-server/: Cargo.toml
tyde-server/src/: main.rs
(+450 files in other folders)
