[workspace]
resolver = "2"
members = [
    "protocol",
    "server",
    "client",
    "tests",
    "frontend",
    "frontend/tauri-shell",
    "devtools-protocol",
    "dev-driver",
    "host-config",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "net", "process", "sync", "time", "rt-multi-thread"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
