[package]
name = "tyde-dev-driver"
edition.workspace = true

[dependencies]
client = { path = "../client" }
devtools-protocol = { path = "../devtools-protocol" }
protocol = { path = "../protocol" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
server = { path = "../server" }
tempfile = "3"
