[package]
name = "frontend"
edition.workspace = true

[dependencies]
protocol = { path = "../protocol", default-features = false }
leptos = { version = "0.8.17", features = ["csr"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
log = "0.4"
console_log = "1"
