[package]
name = "mqtt-transport"
edition.workspace = true

[features]
default = []
test-support = []

# Transport-neutral / portable dependencies shared by both the native and the
# wasm builds. The MQTT I/O backend itself is target-specific (see below).
[dependencies]
base64.workspace = true
ciborium = "0.2"
chacha20poly1305 = "0.10.1"
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
getrandom = "0.3"
hkdf = "0.13.0"
rand = "0.8"
# mqtt-transport only needs protocol::types (BrokerUrl, Version, …), never the
# tokio-backed `framing` feature, so keep it default-features = false on both
# targets — that is what lets protocol compile to wasm32.
protocol = { path = "../protocol", default-features = false }
serde.workspace = true
sha2 = "0.11.0"
thiserror.workspace = true
tracing.workspace = true
url = "2"

# Native backend: rumqttc + rustls TLS + the full tokio runtime.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
http = "1"
rumqttc = { version = "0.25.1", features = ["websocket"] }
rustls-native-certs = "0.8"
tokio.workspace = true
tokio-rustls = { version = "0.26", default-features = false }
webpki-roots = "1"

# Wasm backend: browser WebSocket (TLS terminated by the browser, so no rustls)
# + the standalone mqttbytes 0.6 codec (rumqttc's own codec does not compile to
# wasm32). tokio is reduced to the wasm-safe feature subset; timers come from
# wasmtimer (see src/time.rs). getrandom backends are enabled for both the
# direct 0.3 dep (reconnect.rs) and the transitive 0.2 dep (rand → OsRng); the
# 0.3 backend also needs `--cfg getrandom_backend="wasm_js"` (root .cargo/config).
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", default-features = false, features = ["sync", "macros", "io-util"] }
mqttbytes = "0.6"
bytes = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "BinaryType",
    "CloseEvent",
    "ErrorEvent",
    "Event",
    "MessageEvent",
    "WebSocket",
] }
wasmtimer = "0.4"
getrandom = { version = "0.3", features = ["wasm_js", "std"] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }

[dev-dependencies]
# mqttbytes is the wasm codec; depend on it here too so a native unit test can
# assert byte-for-byte parity against rumqttc's encoder without a wasm runtime.
mqttbytes = "0.6"
bytes = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
rcgen = "0.14.7"
rumqttd = "0.20.0"
tempfile = "3"
