[package]
name = "server"
edition.workspace = true

[features]
default = []
full-backends = []

[dependencies]
anyhow = "1"
client = { path = "../client" }
devtools-protocol = { path = "../devtools-protocol" }
protocol = { path = "../protocol" }
axum = "0.8"
base64 = "0.22"
portable-pty = "0.8"
rmcp = { version = "0.15.0", default-features = false, features = ["macros", "schemars", "server", "transport-streamable-http-server"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
