[package]
name = "server"
edition.workspace = true

[features]
default = []
full-backends = []

[dependencies]
anyhow = "1"
blake2 = "0.10"
futures-util = "0.3"
fs2 = "0.4"
client = { path = "../client" }
devtools-protocol = { path = "../devtools-protocol" }
protocol = { path = "../protocol" }
mqtt-transport = { path = "../mqtt-transport" }
axum = "0.8"
base64 = "0.22"
command-group = { version = "5", features = ["with-tokio"] }
indexmap = "2"
notify = "8"
portable-pty = "0.8"
rmcp = { version = "0.15.0", default-features = false, features = ["macros", "schemars", "server", "transport-streamable-http-server"] }
serde.workspace = true
serde_json.workspace = true
tempfile = "3"
tokio.workspace = true
tokio-util = "0.7"
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
