[package]
name = "server"
edition.workspace = true

[features]
default = []
full-backends = []

[dependencies]
anyhow = "1"
blake2 = "0.10"
futures-util = "0.3"
fs2 = "0.4"
hmac = "0.12"
client = { path = "../client" }
devtools-protocol = { path = "../devtools-protocol" }
protocol = { path = "../protocol" }
mqtt-transport = { path = "../mqtt-transport" }
axum = "0.8"
base64 = "0.22"
command-group = { version = "5", features = ["with-tokio"] }
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
indexmap = "2"
regex = "1"
notify = "8"
portable-pty = "0.8"
reqwest = { version = "0.12", features = ["json"] }
rmcp = { version = "0.15.0", default-features = false, features = ["macros", "schemars", "server", "transport-streamable-http-server"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3"
tokio.workspace = true
tokio-util = "0.7"
url = "2"
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
