[package]
name = "tests"
edition.workspace = true

[dependencies]
client = { path = "../client" }
protocol = { path = "../protocol" }
server = { path = "../server" }
tyde-dev-driver = { path = "../dev-driver" }
paste = "1"
rmcp = { version = "0.15.0", default-features = false, features = ["client", "transport-streamable-http-client-reqwest"] }
serde_json.workspace = true
tempfile = "3"
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
