[package]
name = "tyde-server"
version = "0.8.19-beta.9"
edition.workspace = true

[[bin]]
name = "tyde-server"
path = "src/main.rs"

[dependencies]
server = { path = "../server" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(unix)'.dependencies]
rlimit = "0.10"
