[package]
name = "tauri-shell"
version = "0.8.19-beta.2"
edition.workspace = true
default-run = "tyde"

[lib]
name = "tauri_shell"
crate-type = ["lib", "cdylib", "staticlib"]
doctest = false

[[bin]]
name = "tyde"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
devtools-protocol = { path = "../../devtools-protocol" }
host-config = { path = "../../host-config" }
protocol = { path = "../../protocol", default-features = false }
reqwest = { version = "0.12", features = ["json"] }
serde_json.workspace = true
sha2 = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }
serde.workspace = true
tokio.workspace = true
tokio-util = "0.7"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2"
tracing.workspace = true
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid.workspace = true
server = { path = "../../server" }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation-sys = "0.8.7"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
