[package]
name = "tyde-mobile-shell"
version = "0.8.19-beta.27"
edition.workspace = true
default-run = "tyde-mobile"

[lib]
name = "tyde_mobile_shell"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "tyde-mobile"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
devtools-protocol = { path = "../../devtools-protocol" }
host-config = { path = "../../host-config" }
mobile-shell-types = { path = "../../mobile-shell-types" }
protocol = { path = "../../protocol", default-features = false }
mqtt-transport = { path = "../../mqtt-transport" }
uuid = { version = "1", features = ["v4"] }
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.11.0"
tauri = { version = "2.10.3", features = ["devtools"] }
tauri-plugin-barcode-scanner = "2"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror.workspace = true
urlencoding = "2"

[target.'cfg(target_os = "ios")'.dependencies]
security-framework = "3"


[dev-dependencies]
tempfile = "3"
