[package]
name = "tyde-server"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "6"
base64 = "0.22"
notify = "6"
parking_lot = "0.12"
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tyde-protocol = { path = "../tyde-protocol" }
uuid = { version = "1", features = ["v4"] }
