# PHASE-0 SPIKE — fallback ladder rung 1. Standalone `mqttbytes` crate
# (the rumqttc codec extracted as its own crate; depends only on `bytes`).
# Isolated standalone workspace so it does NOT join the main Tyde workspace.
[package]
name = "mqttbytes-standalone-wasm-spike"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
mqttbytes = "0.6.0"
bytes = "1"

[lib]
crate-type = ["cdylib", "rlib"]
